<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/label_dimen"
            android:textColor="#009688"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:text="@string/create_course_label"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            android:layout_marginEnd="10dp"
            android:id="@+id/close_ic"
            />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_title_input_layout"
        android:paddingBottom="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:paddingEnd="10dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/course_title_input"
            android:hint="@string/course_name_input_hint"
            android:paddingStart="10dp"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/course_code_input_layout"
            android:layout_marginStart="10dp"
            android:layout_weight="1.87"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/course_code_input"
                android:hint="@string/course_code_label"
                android:paddingStart="10dp"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_btn_label"
            android:backgroundTint="#009688"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_course_btn_label"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorAccent"
            android:textStyle="bold"
            android:id="@+id/create_course_button"
            android:textColor="@android:color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            />

    </LinearLayout>
</LinearLayout>