<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lecture"
    >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_auth_master_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        >
        <!--SIGN IN UI COMPONENTS START HERE-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/logo"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="220dp"
            android:textColorHint="@android:color/white"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/email_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/email_address_label"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_input_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColorHint="@android:color/white"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/pwd_input_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/user_auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwd_input_layout"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/loginButtonColour"
            android:text="@string/log_in_label"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/forgot_pwd_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_auth_button"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/forgot_pwd_label"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/switch_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pwd_link"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/create_account_label"
            android:textColor="@android:color/white"
            />
        <!--SIGN IN UI COMPONENTS END HERE-->

        <!--SIGN UP UI COMPONENTS START HERE-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_pwd_confirm_input_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/pwd_input_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/sign_up_pwd_confirm_input_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="Confirm Password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_fname_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/sign_up_pwd_confirm_input_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/sign_up_fname_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="First Name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_lname_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/sign_up_fname_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/sign_up_lname_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="Last Name"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/user_type_dropdown"
            style="@android:style/Widget.Spinner.DropDown"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@id/sign_up_lname_layout"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:entries="@array/user_type"/>
        <!--SIGN UP UI COMPONENTS END HERE-->
    </RelativeLayout>
</RelativeLayout>